tests/snapshots/integration__integration_tests__remove__pre_remove_hook_runs_for_detached_head.snap
---
source: tests/integration_tests/remove.rs
info:
  program: wt
  args:
    - remove
    - "--no-background"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1735776000"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
🔄 [36mRemoving current worktree...[39m
🔄 [36mRunning pre-remove:[39m
[107m [0m  [2m[0m[2m[34mtouch[0m[2m [REPO]/detached-hook-marker.txt [0m[2m[36m&&[0m[2m [0m[2m[34mecho[0m[2m [0m[2m[32m'branch='[0m[2m[0m[2m[32m''[0m[2m [0m[2m[36m>[0m[2m[0m
[107m [0m  [2m[REPO]/detached-hook-branch.txt[0m
[0m✅ [32mRemoved worktree (detached HEAD, no branch to delete)[39m
