tests/snapshots/integration__integration_tests__remove__remove_from_worktree.snap
---
source: tests/integration_tests/remove.rs
assertion_line: 10
info:
  program: wt
  args:
    - remove
  env:
    CLICOLOR_FORCE: "1"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1704067200"
---
success: true
exit_code: 0
----- stdout -----
✅ [32mRemoved worktree, returned to primary at [REPO][0m

----- stderr -----
